@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - pad if length word < n-gram width
 
 0.011  2014-08-19 23:46:56 CEST
        - remove useless code
